Fixed spacing issue with Firefox

--- a/style.css
+++ b/style.css
@@ -132,11 +132,12 @@ body {
   .stats {
     flex-direction: row;
     padding-bottom: 3em;
+    justify-content: flex-start;
   }
 
   .stat {
     padding-top: 3em;
-    margin-right: 4em;
+    /* margin-right: 4em; */
   }
   
   .stat h2 {
